--- a/.github/workflows/update-readmes.yml
+++ b/.github/workflows/update-readmes.yml
@@ -9,7 +9,7 @@ on:
       - '**/README-PT.md'
 
 permissions:
-  contents: write  # Required for the action to commit changes
+  contents: write
 
 jobs:
   update-readmes:
