feat: add functions and documents to scripts

--- a/.github/workflows/update-readmes.yml
+++ b/.github/workflows/update-readmes.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - '**/README.md'
-      - '**/README-PT.md'
+    paths:
+      - 'src/**'
+      - 'scripts/update_readmes.py'
+      - '!**/README.md'
+      - '!**/README-PT.md'
 
 permissions:
   contents: write
